[package]
name = "aptos-indexer"
version = "0.0.1"
description = "Aptos Indexer"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2018"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
bigdecimal = { version = "0.1.2", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
clap = "3.1.17"
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
field_count = "0.1.1"
futures = "0.3.21"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["json", "cookies"] }
reqwest-middleware = { version = "0.1.6" }
reqwest-retry = { version = "0.1.5" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.21.0", features = ["full", "time"] }
url = "2.2.2"

aptos-logger = { git="https://github.com/aptos-labs/aptos-core.git", rev="75b3da75326075041b1987fc0edad436d3fd9ac7" }
aptos-metrics-core = { git="https://github.com/aptos-labs/aptos-core.git", rev="75b3da75326075041b1987fc0edad436d3fd9ac7" }
aptos-rest-client = { git="https://github.com/aptos-labs/aptos-core.git", rev="75b3da75326075041b1987fc0edad436d3fd9ac7" }

[[bin]]
name = "aptos-indexer"

# This is a temporary workaround to avoid multiple library
# definitions for LZ4 (caused by rust-rocksdb).
# This will be removed once our pull requests land.
# https://github.com/rust-rocksdb/rust-rocksdb/issues/666
[patch.crates-io]
lz4 = { git = 'https://github.com/aptos-labs/lz4-rs' }
rocksdb = { git = 'https://github.com/aptos-labs/rust-rocksdb' }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
diesel = { git = "https://github.com/aptos-labs/diesel", branch = "1.4.x" }
